Fix S&R not recovering from canceled folder search

BUG: 435689